--- a/cicd-demo-app/src/app/app.component.html
+++ b/cicd-demo-app/src/app/app.component.html
@@ -403,7 +403,7 @@
     </svg>
 
     <span>CI CD Demo App</span>
-    <span>Version 1.2</span>
+    <span>Version 1.3 - deployed thru Jenkins CI CD</span>
     <span>{{ title }} app is running!</span>
   </div>
 
