--- a/cicd-demo-app/src/app/app.component.html
+++ b/cicd-demo-app/src/app/app.component.html
@@ -404,7 +404,7 @@
 
     <span>CI CD Demo App</span>
     <span>Version 1.3 - deployed thru Jenkins CI CD</span>
-    <span>{{ title }} app is running!</span>
+    <span>{{ title }} app is running, welcome to Devon!</span>
   </div>
 
   <router-outlet></router-outlet>
