--- a/cicd-demo-app/src/app/app.component.html
+++ b/cicd-demo-app/src/app/app.component.html
@@ -303,7 +303,8 @@
     }
   }
 </style>
-
+<!--app.component.html-->
+<app-nav></app-nav>
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <img
@@ -406,6 +407,4 @@
     <span>Version 1.3 - deployed thru Jenkins CI CD</span>
     <span>{{ title }} app is running, welcome to Devon India, Banglore!</span>
   </div>
-
-  <router-outlet></router-outlet>
 </div>
