--- a/cicd-demo-app/src/app/dash/dash.component.html
+++ b/cicd-demo-app/src/app/dash/dash.component.html
@@ -1,6 +1,6 @@
 <!--dash.component.html-->
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
+  <h1 class="mat-h1">Sales Dashboard</h1>
   <mat-grid-list cols="{{ (cardLayout | async)?.columns }}" rowHeight="200px">
     <!--Mini Cards-->
     <mat-grid-tile
