--- a/cicd-demo-app/src/app/dash/dash.component.html
+++ b/cicd-demo-app/src/app/dash/dash.component.html
@@ -1,6 +1,6 @@
 <!--dash.component.html-->
 <div class="grid-container">
-  <h1 class="mat-h1">Sales Dashboard</h1>
+  <h1 class="mat-h1">Dashboard</h1>
   <mat-grid-list cols="{{ (cardLayout | async)?.columns }}" rowHeight="200px">
     <!--Mini Cards-->
     <mat-grid-tile
@@ -43,15 +43,6 @@
     >
       <app-card title="Online Store Sessions by Traffic Source">
         <app-store-sessions-chart></app-store-sessions-chart>
-      </app-card>
-    </mat-grid-tile>
-    <!--Table-->
-    <mat-grid-tile
-      [colspan]="(cardLayout | async)?.table?.cols"
-      [rowspan]="(cardLayout | async)?.table?.rows"
-    >
-      <app-card title="Latest Orders">
-        <app-orders-table></app-orders-table>
       </app-card>
     </mat-grid-tile>
   </mat-grid-list>
