--- a/cicd-demo-app/src/app/nav/nav.component.html
+++ b/cicd-demo-app/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>cicd-demo-app</span>
+      <span>CI CD Demo App</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
